--- a/WaveCrypt/WaveCrypt.cbp
+++ b/WaveCrypt/WaveCrypt.cbp
@@ -35,6 +35,7 @@
 		<Unit filename="encoder.h" />
 		<Unit filename="headerLogic.h" />
 		<Unit filename="headerStruct.h" />
+		<Unit filename="hiddenDataHeaderStruct.h" />
 		<Unit filename="hiddenFile.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
