added 'encode message in data stream' function, encodeMessage() and encodeBitInByte(); improved GUI function structure and quality of life improvements/bug fixes to GUI

--- a/WaveCrypt/WaveCrypt.cbp
+++ b/WaveCrypt/WaveCrypt.cbp
@@ -46,6 +46,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menuGUI.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="menuGUI.h" />
 		<Unit filename="wavHeader.c">
 			<Option compilerVar="CC" />
 		</Unit>
