Added util file and worked on helper functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ project(wave-cryptography)
 add_executable(wave-cryptography main.c 
 src/chacha.c 
 src/encoder.c 
-src/hiddenHeader.c 
+src/messageHeader.c
 src/menuGUI.c 
-src/wavHeader.c)
+src/wavHeader.c
+src/util.c)
 
 target_compile_features(wave-cryptography PRIVATE cxx_std_20)
 target_include_directories(wave-cryptography PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
